main.css
/* ... */
.list[drop-active=false] {
	cursor: not-allowed;
	background-color: rgb(255, 196, 196);
}

.list[click-active=true]:hover {
	cursor: pointer;
	background-color: rgb(194, 194, 194);
}

.list[click-active=false]:hover {
	cursor: not-allowed;
	background-color: rgb(255, 196, 196);
}

.list[click-active=true] {
	border: 2px dashed rgba(0, 0, 0, 0.4);
}

.list .list-item {
	font-family: Calibri, sans-serif;
	font-size: 17.5px;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.06);
	border-radius: 10px;
	border: 1px solid rgb(205, 205, 205);
	padding: 4px 4px;
	text-align: center;
	margin: 1px 0px;
	transition: 0.1s ease;
	z-index: 1;
	transition: background-color 0.2s ease;
	word-wrap: break-word;
}

.list .list-item:hover {
	cursor: pointer;
	background-color: rgba(0, 0, 0, 0.12);
}

.list .list-item:active {
	cursor: pointer;
	transform: scale(0.98);
}

.list[click-active=false] .list-item:hover {
	cursor: not-allowed;
}

.list-item.lowerDivs {
	background-color: rgba(206, 254, 208, 1);
}

.list-item.upperDivs {
	background-color: rgba(206, 239, 254, 1);
}

.list-item.breadths {
	background-color: rgb(254, 248, 168);
}

.list-item.minorCourses {
	background-color: rgba(255, 194, 255, 0.7);
}

.list-item.addedClass {
	background-color:rgb(255, 223, 166)
}

.list-item.lowerDivs:hover {
	background-color: rgba(152, 236, 156, 0.7);
}

.list-item.upperDivs:hover {
	background-color: rgba(151, 208, 235, 0.6);
}

.list-item.breadths:hover {
	background-color: rgba(235, 226, 107, 0.8);
}

.list-item.minorCourses:hover {
	background-color: rgba(231, 176, 231, 0.7);
}

.list-item.addedClass:hover {
	background-color:rgb(245, 212, 155)
}

.list .list-item.lowerDivs.clicked {
	background-color: rgba(150, 226, 154, 0.8);
}

.list .list-item.upperDivs.clicked {
	background-color: rgba(148, 199, 223, 0.7);
}

.list .list-item.breadths.clicked {
	background-color: rgba(224, 216, 104, 0.8);
}

.list .list-item.minorCourses.clicked {
	background-color: rgba(226, 164, 226, 0.7);
}

.list .list-item.addedClass.clicked {
	background-color:rgb(238, 204, 146)
}

.list[click-active=true] .list-item.lowerDivs:hover {
	background-color: rgba(206, 254, 208, 1);
}

.list[click-active=true] .list-item.upperDivs:hover {
	background-color: rgba(206, 239, 254, 1);
}

.list[click-active=true] .list-item.breadths:hover {
	background-color: rgb(254, 248, 168);
}

.list[click-active=true] .list-item.minorCourses:hover {
	background-color: rgba(255, 194, 255, 0.7);
}

.list[click-active=false] .list-item.lowerDivs:hover {
	background-color: rgba(206, 254, 208, 1);
}

.list[click-active=false] .list-item.upperDivs:hover {
	background-color: rgba(206, 239, 254, 1);
}

.list[click-active=false] .list-item.breadths:hover {
	background-color: rgb(254, 248, 168);
}

.list[click-active=false] .list-item.minorCourses:hover {
	background-color: rgba(255, 194, 255, 0.7);
}

#schedule-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.underline {
	height: 2px;
	background-color:rgba(0, 0, 0, 0.3);
	width: 90%;
	margin-top: -8px;
	margin-bottom: 8px;
}

.schedule-lists {
	display: flex;
	flex-direction: column;
	width: 25%;
	height: auto;
	align-items: center;
	justify-content: center;
}

.schedule-lists .list {
	height: 155px;
	margin-bottom: 5px;
}

#file {
	visibility: hidden;
}

@media (max-width: 1408px) {
	.main-container {
		width: 80vw;
	}
	#error-container {
		width: 80vw;
	}
	.class-lists:not(.minor-selected) .list-with-title {
		width: 26vw;
	}
}

@media (max-width: 1200px) {
	.all-filters {
		flex-direction: column;
	}
	#filter-container {
		flex-direction: column;
	}
	.list-container {
		margin: 0 12px;
	}
	.links-container {
		width: 75vw;
	}
	#resource-header {
		width: 40%;
	}
}

@media (max-width: 820px) {
	#logo img {
		width: 230px;
	}
	#error-container {
		width: 94vw;
	}
	.main-container {
		width: 94vw;
	}
	.links-container {
		width: 90vw;
	}
	.link-container-title {
		font-size: 20px;
	}
	.link-item {
		padding: 4px 0px;
		font-size: 16px;
	}
	#schedule-list-wrapper {
		flex-direction: column;
		justify-content: flex-start;
		width: 100%;
		height: 380px;
		overflow-y: scroll;
	}
	#class-list-wrapper.minor-selected {
		flex-direction: column;
		justify-content: flex-start;
		width: 100%;
		height: 200px;
		overflow-y: scroll;
	}
	.class-lists.minor-selected {
		width: 100%;
		height: auto;
	}
	.minor-selected .list-with-title { 
		width: 50%;
	}
	.minor-selected .list {
		height: 100px;
	}
	.class-lists:not(.minor-selected) .list-with-title {
		width: 31vw;
	}
	.schedule-lists {
		flex-direction: row;
		width: 100%;
	}
	.schedule-lists .list {
		height: 100px;
	}
	.list-container {
		margin: 0 8px;
	}
	header h1 {
		font-size: 36px;
	}
	header h2 {
		font-size: 20px;
	}
	header h3 {
		font-size: 20px;
	}
	#degree-container {
		font: bold 16px Sen, sans-serif; 
	}
	select {
		font: bold 14px Sen, sans-serif;
	}
	.filter {
		width: 200px;
	}
	#refresh-symbol {
		height: 18px;
		width: 22px;
		margin: 4px;
	}
	#export-symbol {
		height: 22px;
		width: 22px;
		margin: 4px;
	}
	#import-symbol {
		height: 26px;
		width: 26px;
		margin: 4px 4px 4px 3px;
	}
	#image-symbol {
		height: 24px;
		width: 21px;
		margin: 4px;
	}
	.toolbar-text {
		font-size: 14px;
	}
	.list-title {
		font-size: 16px;
	}
	.list-searchbar {
		font-size: 14px;
	}
	.list .list-item {
		font-size: 15px;
	}
	#resource-header {
		width: 50%;
		font-size: 18px;
	}
}

@media (max-height: 600px) {
	.class-lists {
		height: auto;
	}
	.class-lists .list {
		height: 100px;
	}
}

@media (max-width: 568px) {
	.class-lists {
		height: auto;
	}
	#resource-header {
		width: 75%;
	}
}

@media (max-width: 424px) {
	.class-lists:not(.minor-selected) #breadths-title {
		height: 34px;
	}
	.class-lists:not(.minor-selected) .list {
		height: 132px;
	}
}

